--- a/.github/workflows/build_apk.yml
+++ b/.github/workflows/build_apk.yml
@@ -24,7 +24,36 @@ jobs:
       uses: steebchen/flutter@v1.1.0
       run: ./flutter build apk
 
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
-    - name: Build with Gradle
-      run: ./gradlew build
+    - uses: actions/upload-artifact@v4
+  with:
+    name: hook_test
+
+    # A file, directory or wildcard pattern that describes what to upload
+    # Required.
+    path: /build/app/outputs/flutter-apk/app-release.apk
+
+    # The desired behavior if no files are found using the provided path.
+    # Available Options:
+    #   warn: Output a warning but do not fail the action
+    #   error: Fail the action with an error message
+    #   ignore: Do not output any warnings or errors, the action does not fail
+    # Optional. Default is 'warn'
+    if-no-files-found: error
+
+    # Duration after which artifact will expire in days. 0 means using default retention.
+    # Minimum 1 day.
+    # Maximum 90 days unless changed from the repository settings page.
+    # Optional. Defaults to repository settings.
+    retention-days: 0 
+
+    # If true, an artifact with a matching name will be deleted before a new one is uploaded.
+    # If false, the action will fail if an artifact for the given name already exists.
+    # Does not fail if the artifact does not exist.
+    # Optional. Default is 'false'
+    overwrite: true
+
+    # Whether to include hidden files in the provided path in the artifact
+    # The file contents of any hidden files in the path should be validated before
+    # enabled this to avoid uploading sensitive information.
+    # Optional. Default is 'false'
+    include-hidden-files: 
