--- a/.github/workflows/build_apk.yml
+++ b/.github/workflows/build_apk.yml
@@ -24,7 +24,7 @@ jobs:
       uses: steebchen/flutter@v1.1.0
       
     - name: build
-      run: ./flutter build apk
+      run: flutter build apk
 
     - uses: actions/upload-artifact@v4
       with:
