--- a/.github/workflows/build_apk.yml
+++ b/.github/workflows/build_apk.yml
@@ -12,13 +12,16 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
-    - name: set up JDK 11
-      uses: actions/setup-java@v4
+
+    - name: Clone repository
+      uses: actions/checkout@v4
+
+    - name: Set up Flutter
+      uses: subosito/flutter-action@v2
       with:
-        java-version: '11'
-        distribution: 'temurin'
-        cache: gradle
+        channel: stable
+        flutter-version-file: pubspec.yaml # path to pubspec.yaml        
+    - run: flutter --version
 
     - name: flutter-cli
       uses: steebchen/flutter@v1.1.0
