--- a/.github/workflows/build_apk.yml
+++ b/.github/workflows/build_apk.yml
@@ -21,13 +21,7 @@ jobs:
       with:
         channel: stable
         flutter-version-file: pubspec.yaml # path to pubspec.yaml        
-    - run: flutter --version
-
-    - name: flutter-cli
-      uses: steebchen/flutter@v1.1.0
-      
-    - name: build
-      run: flutter build apk
+    - run: flutter build apk
 
     - uses: actions/upload-artifact@v4
       with:
