--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,7 @@ version: 1.0.0+1
 
 environment:
   sdk: ^3.8.0-265.0.dev
-  flutter: 3.32.0-1.0.pre.36
+  flutter: ^3.29.0
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
