--- a/.github/workflows/build_apk.yml
+++ b/.github/workflows/build_apk.yml
@@ -20,7 +20,7 @@ jobs:
       uses: subosito/flutter-action@v2
       with:
         channel: stable
-        flutter-version-file: pubspec.yaml # path to pubspec.yaml        
+        flutter-version: 3.19.0    
     - run: flutter build apk
 
     - uses: actions/upload-artifact@v4
