--- a/.github/workflows/build_apk.yml
+++ b/.github/workflows/build_apk.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Set up Flutter
       uses: subosito/flutter-action@v2
       with:
-        channel: pre
+        channel: stable
     - run: flutter pub get       
     - run: flutter build apk
 
