--- a/.github/workflows/build_apk.yml
+++ b/.github/workflows/build_apk.yml
@@ -52,4 +52,4 @@ jobs:
     # The file contents of any hidden files in the path should be validated before
     # enabled this to avoid uploading sensitive information.
     # Optional. Default is 'false'
-        include-hidden-files: 
+        include-hidden-files: false
